--- a/.github/workflows/connect-publish.yaml
+++ b/.github/workflows/connect-publish.yaml
@@ -19,3 +19,11 @@ jobs:
           dir: |
             ./API/:bike_predict_api
             ./App/client_app:bike_predict_app
+            ./App/model_performance:bike_predict_model_performance
+            ./Email/:bike_predict_email
+            ./ETL/clean_raw/:bike_predict_clean_raw
+            ./ETL/intake_raw/:bike_predict_intake_raw
+            ./ETL/station_api_to_pin/:bike_prediction_pin_stations
+            ./Model/build_rxgb/:bike_predict_build_xgb
+            ./Model/model_quality_metrics/:bike_predict_model_quality
+
