Run deploy as part of GHA

--- a/.github/workflows/connect-publish.yaml
+++ b/.github/workflows/connect-publish.yaml
@@ -12,6 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Publish Connect content
         uses: rstudio/actions/connect-publish@main
+        env:
+          CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
+          CONNECT_SERVER: https://rsc.soleng.rstudioservices.com/
+          CONTENT_DB_USER: ${{ secrets.CONTENT_DB_USER }}
+          CONTENT_DB_PASS: ${{ secrets.CONTENT_DB_PASS }}
         with:
           url: https://rsc.soleng.rstudioservices.com/
           api-key: ${{ secrets.CONNECT_API_KEY }}
@@ -26,4 +31,9 @@ jobs:
             ./ETL/station_api_to_pin/:bike_predict_pin_stations
             ./Model/build_rxgb/:bike_predict_build_xgb
             ./Model/model_quality_metrics/:bike_predict_model_quality
-
+        - name: Install renv
+          run: Rscript -e 'install.packages(c("renv"))'
+        - name: Restore renv
+          run: Rscript -e 'renv::restore(lockfile = "./Deploy/renv.lock")'
+        - name: Run deploy Script
+          run: Rscript -e 'rmarkdown::render("./Deploy/deploy.Rmd")'
