--- a/.github/workflows/connect-publish.yaml
+++ b/.github/workflows/connect-publish.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   connect-publish:
     name: connect-publish
-    runs-on: ubuntu-18.04
+    runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v2
       - name: Publish Connect content
