--- a/.github/workflows/connect-publish.yaml
+++ b/.github/workflows/connect-publish.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   connect-publish:
     name: connect-publish
-    runs-on: macOS-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - name: Publish Connect content
@@ -26,6 +26,8 @@ jobs:
             ./App/client_app:bike_predict_app
             ./App/model_performance:bike_predict_model_performance
             ./Email/:bike_predict_email
+      - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-pandoc@v1
       - name: Install renv
         run: Rscript -e 'install.packages("renv", repos = "https://packagemanager.rstudio.com/all/3317395")'
       - name: Restore renv
