--- a/intro/manifest.json
+++ b/intro/manifest.json
@@ -444,6 +444,34 @@
         "Built": "R 4.1.0; ; 2021-06-28 13:34:52 UTC; unix"
       }
     },
+    "gitlink": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "gitlink",
+        "Title": "Add 'Git' Links to Your Web Based Assets",
+        "Version": "0.1.3",
+        "Authors@R": "\n    c(person(given = \"Cole\",\n             family = \"Arendt\",\n             role = c(\"aut\", \"cre\"),\n             email = \"cole@rstudio.com\"),\n      person(given = \"RStudio\",\n             role = c(\"cph\", \"fnd\")))",
+        "Description": "Provides helpers to add 'Git' links to 'shiny'\n    applications, 'rmarkdown' documents, and other 'HTML' based resources.\n    This is most commonly used for 'GitHub' ribbons.",
+        "License": "MIT + file LICENSE",
+        "URL": "https://github.com/colearendt/gitlink",
+        "BugReports": "https://github.com/colearendt/gitlink/issues",
+        "Depends": "R (>= 3.1)",
+        "Imports": "htmltools (>= 0.3.6), rlang (>= 0.3.1)",
+        "Suggests": "covr (>= 3.0.1), spelling (>= 2.0), testthat (>= 2.0.0.9000),\nrmarkdown, fs, rprojroot, shiny",
+        "Encoding": "UTF-8",
+        "Language": "en-US",
+        "LazyData": "true",
+        "RoxygenNote": "6.1.1",
+        "NeedsCompilation": "no",
+        "Packaged": "2019-07-19 12:44:55 UTC; carendt",
+        "Author": "Cole Arendt [aut, cre],\n  RStudio [cph, fnd]",
+        "Maintainer": "Cole Arendt <cole@rstudio.com>",
+        "Repository": "CRAN",
+        "Date/Publication": "2019-07-23 12:20:02 UTC",
+        "Built": "R 4.1.0; ; 2021-05-26 15:09:40 UTC; unix"
+      }
+    },
     "glue": {
       "Source": "CRAN",
       "Repository": "https://cran.rstudio.com",
@@ -1383,8 +1411,11 @@
     "arrows.png": {
       "checksum": "6919639929eee7172e22d343e8c1c264"
     },
+    "index.html": {
+      "checksum": "fa7d4a015fe29ef1a0c654f463bfd701"
+    },
     "index.Rmd": {
-      "checksum": "26b9c33eafd1944bda53076c114fc995"
+      "checksum": "eab2cbd29997ce70d91c27631aead7e1"
     }
   },
   "users": null
