--- a/content/02-model/manifest.json
+++ b/content/02-model/manifest.json
@@ -4,7 +4,7 @@
   "platform": "4.1.2",
   "metadata": {
     "appmode": "rmd-static",
-    "primary_rmd": "train_and_deploy_model.qmd",
+    "primary_rmd": "01-train-and-deploy-model.qmd",
     "primary_html": null,
     "content_category": null,
     "has_parameters": false
@@ -4423,8 +4423,8 @@
     }
   },
   "files": {
-    "train_and_deploy_model.qmd": {
-      "checksum": "7bcb59e6cb715c03f40dc6c45b6c4218"
+    "01-train-and-deploy-model.qmd": {
+      "checksum": "198bd4e671861724722354b251e7f358"
     }
   },
   "users": null
