--- a/content/03-app/manifest.json
+++ b/content/03-app/manifest.json
@@ -2080,6 +2080,35 @@
         "Built": "R 4.1.0; x86_64-pc-linux-gnu; 2021-05-19 00:32:07 UTC; unix"
       }
     },
+    "pool": {
+      "Source": "CRAN",
+      "Repository": "https://colorado.rstudio.com/rspm/cran/__linux__/bionic/latest",
+      "description": {
+        "Type": "Package",
+        "Package": "pool",
+        "Title": "Object Pooling",
+        "Version": "0.1.6",
+        "Authors@R": "\n    c(person(given = \"Joe\",\n             family = \"Cheng\",\n             role = c(\"aut\", \"cre\"),\n             email = \"joe@rstudio.com\"),\n      person(given = \"Barbara\",\n             family = \"Borges\",\n             role = \"aut\",\n             email = \"barb.b.ribeiro@gmail.com\"),\n      person(family = \"RStudio\",\n             role = \"cph\"))",
+        "Description": "Enables the creation of object pools, which make it\n    less computationally expensive to fetch a new object. Currently the\n    only supported pooled objects are 'DBI' connections.",
+        "License": "GPL-3",
+        "URL": "https://github.com/rstudio/pool",
+        "BugReports": "https://github.com/rstudio/pool/issues",
+        "Depends": "methods, R (>= 3.0.0)",
+        "Imports": "DBI, R6, later (>= 1.0.0)",
+        "Suggests": "testthat, tibble, dplyr, dbplyr, RSQLite, RMySQL",
+        "Encoding": "UTF-8",
+        "LazyData": "TRUE",
+        "RoxygenNote": "7.1.1",
+        "Collate": "'utils.R' 'scheduler.R' 'pool.R' 'pool-methods.R' 'object.R'\n'DBI.R' 'DBI-connection-interpolate.R' 'DBI-connection-quote.R'\n'DBI-connection-sql.R' 'DBI-connection-transaction.R'\n'DBI-connection.R' 'DBI-driver.R' 'DBI-object-deprecated.R'\n'DBI-object.R' 'DBI-pool.R' 'dbplyr.R' 'zzz-hooks.R'",
+        "NeedsCompilation": "no",
+        "Packaged": "2021-01-14 16:23:26 UTC; hadley",
+        "Author": "Joe Cheng [aut, cre],\n  Barbara Borges [aut],\n  RStudio [cph]",
+        "Maintainer": "Joe Cheng <joe@rstudio.com>",
+        "Repository": "RSPM",
+        "Date/Publication": "2021-01-14 21:20:03 UTC",
+        "Built": "R 4.1.0; ; 2021-05-19 03:58:33 UTC; unix"
+      }
+    },
     "prettyunits": {
       "Source": "CRAN",
       "Repository": "https://colorado.rstudio.com/rspm/cran/__linux__/bionic/latest",
@@ -3190,7 +3219,7 @@
   },
   "files": {
     "app.R": {
-      "checksum": "5183218bd49d3cee609a52b2af3b5350"
+      "checksum": "9e6df3da4de96e0482118d13a4a732ad"
     }
   },
   "users": null
