Added arrows.png to manifest.json

--- a/content/03-app/02-connect-widgets-app/manifest.json
+++ b/content/03-app/02-connect-widgets-app/manifest.json
@@ -1421,6 +1421,9 @@
     }
   },
   "files": {
+    "arrows.png": {
+      "checksum": "6919639929eee7172e22d343e8c1c264"
+    },
     "document.qmd": {
       "checksum": "633ba0aead1bb5ef684c64a056b94b89"
     }
